--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 		"fs-extra": "^8.1.0",
 		"lorem-ipsum": "^2.0.3",
 		"npmlog": "^4.1.2",
-		"slimdom": "^2.3.1"
+		"slimdom": "^2.3.1",
+		"uuid": "^8.3.2"
 	},
-	"devDependencies": {},
 	"scripts": {
 		"jats": "node generator examples/generate-jats.xqm generated/jats.xml",
 		"dita-topic": "node generator examples/generate-dita-topic.xqm generated/dita-topic.xml",
